--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "doblon";
+    src: url("doblons.ttf") format("truetype");
+}
+
 body {
     margin: 0;
     padding: 0;
