--- a/public/style/style.css
+++ b/public/style/style.css
@@ -3,9 +3,109 @@
     src: url("doblons.ttf") format("truetype");
 }
 
+:root {
+    --background: #484d66;
+    --accent: rgba(255, 255, 255, 0.5);
+    --button: #ea6363;
+}
+
 body {
     margin: 0;
     padding: 0;
+    background: var(--background);
+    font-family: doblon;
+}
+
+#title1, #title2{
+    margin: 0;
+    font-size: 130px;
+    color: #fff;
+}
+
+#title2 {
+    color: var(--accent);
+}
+
+#center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
     height: 100vh;
-    overflow: hidden;
+    flex-direction: column;
+}
+
+.f {
+    display: flex;
+}
+
+#username-holder {
+    height: 30px;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#username-input {
+    font-family: doblon;
+    font-size: 26px;
+    padding: 6px;
+    padding-left: 12px;
+    border: none;
+    border-radius: 4px;
+    width: 300px;
+    outline: none;
+    color: #3A3A3F;
+}
+
+#username-input::-moz-selection {
+    background: none;
+}
+
+#start-button {
+    font-size: 26px;
+    padding: 4px 10px;
+    color: #fff;
+    background-color: var(--button);
+    border: none;
+    cursor: pointer;
+    margin-left: 10px;
+    border-radius: 4px;
+    display: flex;
+}
+
+#start-button p {
+    margin: 0;
+    margin-top: 5px;
+}
+
+#start-button img {
+    width: 16px;
+    aspect-ratio: 1;
+    margin-left: 5px;
+}
+
+#start-button:hover {
+    background: #CD5656;
+    transition: background-color 200ms;
+}
+
+#created-by {
+    z-index: 1000;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    font-size: 20px;
+    color: rgba(255, 255, 255, 0.9);
+    padding: 5px;
+    margin-left: 10px;
+    margin-bottom: 5px;
+    padding: 5px;
+    color: var(--accent);
+}
+
+#created-by a {
+    color: #5783e0;
+    text-decoration: none;
 }
